--- a/sign_up.html
+++ b/sign_up.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
-            <title>Sign_up</title> 
+            <title>Sign Up</title> 
             <meta charset="UTF-8">
+            <link rel="stylesheet" href="/styles/sign_up.css">
         </head>
         <body>
             <h1>Sign Up</h1>
-            <form>
+            <form id="sing_up" name="sing_up" method="GET" action="">
+                <fieldset>
+                    <label class="block">Username:</label>
+                    <input type="text" required="required" name="username"/>
+                    <label class="block">Email:</label>
+                    <input class="block" type="email" required="required" name="email"/>
+                    <label class="block" >Password:</label>
+                    <input class="block" id="password" type="password" required="required" name="password"/>
+                    <label class="block" > Verify Password:</label>
+                    <input class="block" id="verifyPassword" type="password" required="required" name="verifyPassword"/>
+                    <input class="block" id="submit" type ="submit" value="submit"/>
+                </fieldset>
             </form>
         </body>
     </html>
