Log In skeleton added

--- a/sign_up.html
+++ b/sign_up.html
@@ -7,7 +7,7 @@
         </head>
         <body>
             <h1>Sign Up</h1>
-            <form id="sing_up" name="sing_up" method="GET" action="">
+            <form id="sign_up" name="sign_up" method="POST" action="log_in.html">
                 <fieldset>
                     <label class="block">Username:</label>
                     <input type="text" required="required" name="username"/>
