--- a/log_in.html
+++ b/log_in.html
@@ -6,7 +6,14 @@
         </head>
         <body>
             <h1>Log In</h1>
-            <form>
+            <form form id="log_in" name="log_in" method="POST" action="posts.html">
+                <fieldset>
+                    <label class="block">Username:</label>
+                    <input type="text" required="required" name="username"/>
+                    <label class="block" >Password:</label>
+                    <input class="block" id="password" type="password" required="required" name="password"/>
+                    <input class="block" id="submit" type ="submit" value="submit"/>
+                </fieldset>
             </form>
         </body>
     </html>
