--- a/sign_up.html
+++ b/sign_up.html
@@ -3,11 +3,11 @@
         <head>
             <title>Sign Up</title> 
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="/styles/sign_up.css">
+            <link rel="stylesheet" href="sign_up.css">
         </head>
         <body>
             <h1>Sign Up</h1>
-            <form id="sign_up" name="sign_up" method="POST" action="log_in.html">
+            <form id="sign_up" name="sign_up" method="POST" action="log_in.html" onsubmit="return validate()">
                 <fieldset>
                     <label class="block">Username:</label>
                     <input type="text" required="required" name="username"/>
@@ -20,5 +20,8 @@
                     <input class="block" id="submit" type ="submit" value="submit"/>
                 </fieldset>
             </form>
+            <p>Already have an account?</p>
+            <a href="log_in.html">Log In</a>
+        <script src="sign_up.js" ></script>
         </body>
     </html>
