Changed color scheme for sign-up css

--- a/sign_up.html
+++ b/sign_up.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="sign_up.css">
         </head>
         <body>
-            <h1>Sign Up</h1>
+            <h2>Sign Up</h2>
             <form id="sign_up" name="sign_up" method="POST" action="log_in.html" onsubmit="return validate()">
                 <fieldset>
                     <label class="block">Username:</label>
@@ -17,7 +17,7 @@
                     <input class="block" id="password" type="password" required="required" name="password"/>
                     <label class="block" > Verify Password:</label>
                     <input class="block" id="verifyPassword" type="password" required="required" name="verifyPassword"/>
-                    <input class="block" id="submit" type ="submit" value="submit"/>
+                    <input class="block submit" id="submit" type ="submit" value="Submit"/>
                 </fieldset>
             </form>
             <p>Already have an account?</p>
