--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                 <li><a href="#">More</a></li>
             </ul>
         </nav>
-        <button class="tweet-btn">Tweet</button>
+        <button class="tweet-btn">Post</button>
     </aside>
 
     <!-- Main Content -->
