Update home.html with Navigation list

--- a/home.html
+++ b/home.html
@@ -21,18 +21,18 @@
         <a href="http://example.com" class="logo-link"><!-- Pretty sure it will be a TU logo -->
     <div class="logo"></div>
 </a>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Explore</a></li>
-                <li><a href="#">Notifications</a></li>
-                <li><a href="#">Messages</a></li>
-                <li><a href="#">Bookmarks</a></li>
-                <li><a href="#">Lists</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">More</a></li>
-            </ul>
-        </nav>
+      <nav>
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="notifications.html">Notifications</a></li>
+        <li><a href="messages.html">Messages</a></li>
+        <li><a href="bookmarks.html">Bookmarks</a></li>
+        <li><a href="lists.html">Lists</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="more.html">More</a></li>
+    </ul>
+</nav>
         <button class="tweet-btn">Post</button>
     </aside>
 
