--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,9 @@
         <!-- Connect to profile picture store in database -->
         <img src="default_profile_img.png" alt="profile picture"> 
         <h2>Username</h2>
-        <button>Edit Profile</button>
+        <button>
+            <a href="edit_profile.html">Edit Profile</a>
+        </button>
         <div class="follow-info">
             <h3>Followers: </h3>
             <h3>Following: </h3>
