--- a/Group-Project/log_in.html
+++ b/Group-Project/log_in.html
@@ -3,7 +3,7 @@
         <head>
             <title>Log in</title> 
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="./css/login.css">
+            <link rel="stylesheet" href="./login.css">
         </head>
         <body>
             <div class="log_div">
