--- a/Group-Project/sign_up.html
+++ b/Group-Project/sign_up.html
@@ -3,12 +3,12 @@
         <head>
             <title>Sign Up</title> 
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="./css/sign_up.css">
+            <link rel="stylesheet" href="./sign_up.css">
         </head>
         <body>
             <div class="sign_Div">
             <h1>Sign Up</h1>
-                <form id="sign_up" name="sign_up" method="POST" action="log_in.html" onsubmit="return validate()">
+                <form id="sign_up" name="sign_up" method="POST" action="sign_up" onsubmit="return validate()">
                     <fieldset>
                         <label class="block">Username:</label>
                         <input type="text" required="required" name="username"/>
