sign up goes to log in and vice versa and js works

--- a/Group-Project/sign_up.html
+++ b/Group-Project/sign_up.html
@@ -24,8 +24,8 @@
             </div>
             <div class="alt">
                 <p>Already have an account?</p>
-                <a href="log_in.html">Log In</a>
+                <a href="log_in">Log In</a>
             </div>
-            <script src="./js/sign_up.js"></script>
+            <script src="/sign_up.js"></script>
         </body>
     </html>
