--- a/Group-Project/log_in.html
+++ b/Group-Project/log_in.html
@@ -20,7 +20,7 @@
             </div>
             <div class="alt">
                 <p>New here?</p>
-                <a href="/sign_up.html">sign_up</a>
+                <a href="/sign_up">sign_up</a>
             </div>
         </body>
     </html>
