Posts can be added to database

--- a/Group-Project/log_in.html
+++ b/Group-Project/log_in.html
@@ -8,7 +8,7 @@
         <body>
             <div class="log_div">
             <h1>Log In</h1>
-            <form form id="log_in" name="log_in" method="POST" action="posts.html">
+            <form form id="log_in" name="log_in" method="POST" action="/home">
                 <fieldset>
                     <label class="block">Username:</label>
                     <input type="text" required="required" name="username"/>
