Profile page displays all posts for now

--- a/Group-Project/home.html
+++ b/Group-Project/home.html
@@ -20,7 +20,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="lists.html">Lists</a></li>
-                <li><a href="profile.html">Profile</a></li>
+                <li><a href="/profile">Profile</a></li>
                 <li><a href="settings.html">Settings</a></li>
             </ul>
         </nav>
