--- a/Group-Project/profile.html
+++ b/Group-Project/profile.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <link rel="stylesheet" href="./css/profile.css">
+            <link rel="stylesheet" href="./profile.css">
             <title>Profile</title> 
             <meta charset="UTF-8">
         </head>
         <body>
              <!--Retrieve username from database -->
         <!-- Connect to profile picture store in database -->
-        <img src="./images/default_profile_img.png" alt="profile picture"> 
+        <img src="./default_profile_img.png" alt="profile picture"> 
         <h2>Username</h2>
         <button>
             <a href="edit_profile.html">Edit Profile</a>
@@ -18,10 +18,9 @@
             <h3>Following: </h3>
         </div>
         <h3>Posts</h3>
-        <div class="posts">
-            Posts:
-        </div>
+        <div id="posts-container"class="posts"></div>
 
+        <script src="/profile.js"></script>
         </body>
        
 
