--- a/Group-Project/Account.html
+++ b/Group-Project/Account.html
@@ -3,14 +3,16 @@
         <head>
             <title>Account Settings</title> 
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="settings.css">
+            <link rel="stylesheet" href="css\settings.css">
         </head>
         <body>
             <h1>Settings</h1>
             <div class="nav_bar">
                 <a class="activated_link" href="edit_profile.html">Account</a>
                 <a href="edit_profile.html">Edit Profile</a>
-                <a>Privacy</a>
+                <a href="privacy.html">Privacy</a>
+                <a href="home.html">Home</a>
+
             </div>
            
             <br>
