--- a/Group-Project/edit_profile.html
+++ b/Group-Project/edit_profile.html
@@ -3,14 +3,14 @@
         <head>
             <title>Edit Profile</title> 
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="./css/settings.css">
+            <link rel="stylesheet" href="settings.css">
         </head>
         <body>
             <h1>Settings</h1>
             <div class="nav_bar">
                 <a href="Account.html">Account</a>
                 <a class="activated_link" href="edit_profile.html">Edit Profile</a>
-                <a>Privacy</a>
+                <a href="privacy.html">Privacy</a>
             </div>
            
             <br>
