--- a/Group-Project/home.html
+++ b/Group-Project/home.html
@@ -21,7 +21,7 @@
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="lists.html">Lists</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="settings.html">Settings</a></li>
+                <li><a href="Account.html">Account Settings</a></li>
             </ul>
         </nav>
 
