--- a/Group-Project/log_in.html
+++ b/Group-Project/log_in.html
@@ -8,7 +8,7 @@
         <body>
             <div class="log_div">
             <h1>Log In</h1>
-            <form form id="log_in" name="log_in" method="POST" action="posts.html">
+            <form form id="log_in" name="log_in" method="POST" action="explore.html">
                 <fieldset>
                     <label class="block">Username:</label>
                     <input type="text" required="required" name="username"/>
@@ -20,7 +20,8 @@
             </div>
             <div class="alt">
                 <p>New here?</p>
-                <a href="/sign_up.html">sign_up</a>
+                <a href="sign_up.html">Sign Up</a>
             </div>
+            <script src="./js/log_in.js"></script>
         </body>
     </html>
