posts display username

--- a/Group-Project/profile.html
+++ b/Group-Project/profile.html
@@ -9,7 +9,10 @@
              <!--Retrieve username from database -->
         <!-- Connect to profile picture store in database -->
         <img src="./default_profile_img.png" alt="profile picture"> 
-        <h2>Username</h2>
+        <div id="username-container">
+
+        </div>
+        <!-- <h2>Username</h2> -->
         <button>
             <a href="edit_profile.html">Edit Profile</a>
         </button>
