posts connect to api and tu cursor

--- a/Group-Project/edit_profile.html
+++ b/Group-Project/edit_profile.html
@@ -4,6 +4,7 @@
             <title>Edit Profile</title> 
             <meta charset="UTF-8">
             <link rel="stylesheet" href="./css/settings.css">
+            <link rel="stylesheet" href="css/cursor.css">
         </head>
         <body>
             <h1>Settings</h1>
