--- a/Group-Project/posts.html
+++ b/Group-Project/posts.html
@@ -2,10 +2,13 @@
     <head>
         <title>Posts page</title> 
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./posts.css">
+        <link rel="stylesheet" href="css/posts.css">
+        <link rel="stylesheet" href="css/cursor.css">
     </head>
     <body>
-    <h2> Hello TU student! Today is:  <div>
+        
+    <h2> Hello TU student! Today is:  
+        <div >
             <script>
                 const date = new Date();
                 document.write(date);
@@ -32,7 +35,7 @@
 
 
 </script>
-<!--populate posts from db in accordance to date published top(most recent)-->
-<!--in posts add comment section, reactions thumbs up/down, emojis-->
+<div class="cursor"></div>
+
     </body>
 </html>
