--- a/Group-Project/Account.html
+++ b/Group-Project/Account.html
@@ -4,6 +4,7 @@
             <title>Account Settings</title> 
             <meta charset="UTF-8">
             <link rel="stylesheet" href="settings.css">
+            <link rel="stylesheet" href="css/cursor.css">
         </head>
         <body>
             <h1>Settings</h1>
