--- a/Group-Project/explore.html
+++ b/Group-Project/explore.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Explore T(U)X</title>
     <link rel="stylesheet" href="./css/explore.css">
+    <link rel="stylesheet" href="css/cursor.css">
 </head>
 <body>
 
