--- a/Group-Project/home.html
+++ b/Group-Project/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> T(U)X</title> <!-- T:Towson, U: University, U: User, X:Experience-->
     <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="css/cursor.css">
 </head>
 <body>
 
