--- a/Group-Project/log_in.html
+++ b/Group-Project/log_in.html
@@ -4,6 +4,7 @@
             <title>Log in</title> 
             <meta charset="UTF-8">
             <link rel="stylesheet" href="./login.css">
+            <link rel="stylesheet" href="css/cursor.css">
         </head>
         <body>
             <div class="log_div">
