--- a/Group-Project/profile.html
+++ b/Group-Project/profile.html
@@ -2,6 +2,7 @@
     <html>
         <head>
             <link rel="stylesheet" href="./css/profile.css">
+            <link rel="stylesheet" href="css/cursor.css">
             <title>Profile</title> 
             <meta charset="UTF-8">
         </head>
