--- a/Group5_Project/client/public/index.html
+++ b/Group5_Project/client/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Tap In @ TU</title>
+    <link rel="stylesheet" href="/static/css/main.abc123.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
