--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <link rel="stylesheet" href="profile.css">
+            <!-- <link rel="stylesheet" href="profile.css"> -->
             <title>Profile</title> 
             <meta charset="UTF-8">
         </head>
