--- a/sign_up.html
+++ b/sign_up.html
@@ -3,7 +3,7 @@
         <head>
             <title>Sign Up</title> 
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="sign_up.css">
+            <!-- <link rel="stylesheet" href="sign_up.css"> -->
         </head>
         <body>
             <h2>Sign Up</h2>
