--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> T(U)X</title> <!-- T:Towson, U: University, U: User, X:Experience-->
-    <link rel="stylesheet" href="home.css">
+    <!-- <link rel="stylesheet" href="home.css"> -->
 </head>
 <body>
 
