--- a/posts.html
+++ b/posts.html
@@ -2,7 +2,7 @@
     <head>
         <title>Posts page</title> 
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="posts.css">
+        <!-- <link rel="stylesheet" href="posts.css"> -->
     </head>
     <body>
     <h2> Hello TU student! Today is:  <div>
