final fix to css

--- a/Account.html
+++ b/Account.html
@@ -3,7 +3,7 @@
         <head>
             <title>Account Settings</title> 
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="settings.css">
+            <link rel="stylesheet" href="/Group5_Project/client/public/settings.css">
         </head>
         <body>
             <h1>Settings</h1>
