--- a/log_in.html
+++ b/log_in.html
@@ -3,6 +3,7 @@
         <head>
             <title>Log in</title> 
             <meta charset="UTF-8">
+            <link rel="stylesheet" href="/Group5_Project/client/public/login.css">
         </head>
         <body>
             <h1>Log In</h1>
