--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <head>
             <title>Front Page</title> 
             <meta charset="UTF-8">
+            <link rel="stylesheet" href="/Group5_Project/client/public/index.css">
+
         </head>
         <body>
             <h1>Welcome</h1>
