--- a/home.html
+++ b/home.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> T(U)X</title> <!-- T:Towson, U: University, U: User, X:Experience-->
+    <title> TapIn@TU</title> 
     <link rel="stylesheet" href="home.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -17,11 +18,11 @@
         </a>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="explore.html">Explore</a></li>
-                <li><a href="lists.html">Lists</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="settings.html">Settings</a></li>
+               <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="explore.html"><i class="fas fa-hashtag"></i> Explore</a></li>
+                <li><a href="lists.html"><i class="fas fa-list"></i> Lists</a></li>
+                <li><a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
+                <li><a href="settings.html"><i class="fas fa-cog"></i> More</a></li>
             </ul>
         </nav>
 
